# iron-rook

./: .gitignore  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  SECURITY_CONTEXT.md  mypy.ini  pyproject.toml  test_logging.py  verify_thinking_frames.py
.claude/: napkin.md
.sisyphus/: boulder.json
.sisyphus/ans/: security-agent-fsm-implementation.md
.sisyphus/drafts/: delegate-to-act-refactor.md  security-agent-fsm.md
.sisyphus/evidence/: contextbuilder-complexity.md  reviewer-dependencies.md  task-1-pytest-version.txt  task-1-red-baseline.txt  task-1-status.md  task-1-test-collection.txt  task-10-deletion-output.txt  task-10-grep-verification.txt  task-11-contracts-removal.txt  task-11-grep-verification.txt  task-11-integration-tests.txt  task-12-grep-verification.txt  task-13-final-report.txt  task-13-simplification.txt  task-13-verification.txt  task-14-cli-analysis.txt  task-14-verification.txt  task-15-all-reviewers-verification.txt  task-15-cli-help.txt  task-15-single-agent-test.txt  task-15-verification-summary.txt  task-16-code-quality.txt  task-16-regression-test.txt  task-2-missing-fields-green.txt  task-3-transition-guard.txt  task-4-deletion-output.txt  task-4-grep-verification.txt  task-5-deletion-output.txt  task-5-grep-verification.txt  task-5-retry-policy.txt  task-6-final-verification.txt  task-6-grep-verification.txt  task-7-##  (+19 more)
iron_rook/: __init__.py
tests/: conftest.py  test_cli_rich_logging.py  test_fsm_orchestrator.py  test_loop_fsm.py  test_phase_prompt_envelope.py  test_schemas.py  test_security_phase_logger.py  test_state_machine.py
(+200 files in other folders)
