[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iron-rook"
version = "0.1.0"
description = "PR Review Agent - Multi-agent code review system using dawn-kestrel SDK"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["code-review", "agents", "ai", "llm", "pr-review"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "dawn-kestrel @ file:///Users/parkersligting/develop/pt/dawn-kestrel",
  "click>=8.0",
  "rich>=13.0",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "ruff>=0.1", "mypy>=1.0"]

[project.scripts]
iron-rook = "iron_rook.review.cli:review"
iron-rook-docs = "iron_rook.review.cli:docs"

[tool.setuptools.packages.find]
where = ["."]
include = ["iron_rook*"]

[tool.setuptools.package-data]
"iron_rook.review" = ["py.typed", "*.md"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
disable_error_code = "possibly-missing-attribute"
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[dependency-groups]
dev = ["pyright>=1.1.408", "pytest>=9.0.2", "ruff>=0.15.0", "ty>=0.0.15"]
